添加unslider 和 responsive-nav 插件

--- a/index.html
+++ b/index.html
@@ -1,38 +1,57 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="zh-CN">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>美福美宝</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-
         <!-- <link rel="stylesheet" href="css/normalize.css"> -->
         <!-- <link rel="stylesheet" href="css/main.css"> -->
         <!-- <script src="js/vendor/modernizr-2.8.3.min.js"></script> -->
         <link rel="stylesheet" type="text/css" href="./libs/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="./css/unslider.css">
+        <link rel="stylesheet" type="text/css" href="./css/unslider-dots.css">
+        <link rel="stylesheet" type="text/css" href="./css/responsive-nav.css">
+        <link rel="stylesheet" type="text/css" href="./css/main.css">
     </head>
     <body>
         <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
         <!-- Add your site or application content here -->
-        <p>美福美宝</p>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="banner">
+                        <ul>
+                            <li>This is a slide.</li>
+                            <li>This is another slide.</li>
+                            <li>This is a final slide.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                
+            </div>
+            <div class="row">
+                
+            </div>
+        </div>
         <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script>
         <script>window.jQuery || document.write('<script src="./libs/jquery.min.js"><\/script>')</script>
         <script src="./libs/bootstrap.min.js"></script>
+        <script src="./js/unslider-min.js"></script>
+        <script src="./js/responsive-nav.min.js"></script>
         <script src="./plugins.js"></script>
         <script src="./main.js"></script>
-
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+        window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+        ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
         </script>
         <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     </body>
