初始化 头部 和 菜单

--- a/index.html
+++ b/index.html
@@ -27,15 +27,26 @@
                 <div class="col-xs-12">
                     <div class="banner">
                         <ul>
-                            <li>This is a slide.</li>
-                            <li>This is another slide.</li>
-                            <li>This is a final slide.</li>
+                            <li><img src="tile-wide.png"></li>
+                            <li><img src="tile-wide.png"></li>
+                            <li><img src="tile-wide.png"></li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="row">
-                
+                <div class="col-xs-12">
+                    <nav class="nav-collapse">
+                        <ul>
+                            <li><a href="#">主页</a></li>
+                            <li><a href="#">赴美流程</a></li>
+                            <li><a href="#">月子中心</a></li>
+                            <li><a href="#">妈咪案例</a></li>
+                            <li><a href="#">客户</a></li>
+                            <li><a href="#">联系我们</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
             <div class="row">
                 
