--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" type="text/css" href="./css/unslider.css">
         <link rel="stylesheet" type="text/css" href="./css/unslider-dots.css">
         <link rel="stylesheet" type="text/css" href="./css/responsive-nav.css">
+        <link rel="stylesheet" type="text/css" href="./css/viewer.min.css">
         <link rel="stylesheet" type="text/css" href="./css/main.css">
     </head>
     <body>
@@ -23,18 +24,7 @@
         <![endif]-->
         <!-- Add your site or application content here -->
         <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="banner">
-                        <ul>
-                            <li><img src="tile-wide.png"></li>
-                            <li><img src="tile-wide.png"></li>
-                            <li><img src="tile-wide.png"></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
+            <div class="row" style="margin:0 auto; max-width: 1060px !important;">
                 <div class="col-xs-12">
                     <nav class="nav-collapse">
                         <ul>
@@ -49,6 +39,17 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-xs-12">
+                    <div class="banner">
+                        <ul>
+                            <li><img src="tile-wide.png"></li>
+                            <li><img src="tile-wide.png"></li>
+                            <li><img src="tile-wide.png"></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 
             </div>
         </div>
@@ -57,6 +58,7 @@
         <script src="./libs/bootstrap.min.js"></script>
         <script src="./js/unslider-min.js"></script>
         <script src="./js/responsive-nav.min.js"></script>
+        <script src="./js/viewer.min.js"></script>
         <script src="./plugins.js"></script>
         <script src="./main.js"></script>
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
